--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="box">
       <div class="box-body" id="box">
-        <div class="box-lid">
+        <div class="box-lid shake-animation">
           <div class="box-bowtie"></div>
         </div>
       </div>
